rds.tf
resource "aws_security_group" "rds_sg" {
  name        = "rds-postgres-sg"
  description = "Allow PostgreSQL access"
  vpc_id      = aws_vpc.test_vpc.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_db_subnet_group" "rds_subnet_group" {
  name       = "rds-subnet-group"
  subnet_ids = [ 
    aws_subnet.test_subnet_az1.id,
    aws_subnet.test_subnet_az2.id
  ]
  tags = {
    Name = "Terraform RDS subnet group"
    Environment = "Testing"
  }
}

resource "aws_db_instance" "postgres" {
  identifier              = "babafunbi-postgres-db"
  engine                  = "postgres"
  engine_version          = "17.4"           
  instance_class          = "db.t4g.micro"   
  allocated_storage       = 20
  username                = "adminuser"
  password                = "Jun!20242025"
  db_subnet_group_name    = aws_db_subnet_group.rds_subnet_group.name
  vpc_security_group_ids  = [aws_security_group.rds_sg.id]
  skip_final_snapshot     = true
  publicly_accessible     = true      
  backup_retention_period = 7
  storage_type            = "gp2"

  tags = {
    Name = "MyPostgresDB"
    Environment = "Testing"
  }
}

output "db_endpoint" {
  value = aws_db_instance.postgres.endpoint
}
